--- a/templates/search_bar.templ
+++ b/templates/search_bar.templ
@@ -1,16 +1,15 @@
 package templates
 
-
 templ SearchBar() {
 <div id="search-bar">
 <input type="search" id="search" pattern="[A-Za-z\s\-]*" placeholder="Search..." value="" onkeyup="">
 
-<button type="button" onclick="toggleOrder()">
-<i class="material-icons" id="icon-sort">swap_vert</i>
-</button>
-
 <button type="button" onclick="toggleFilter()">
 <i class="material-icons" id="icon-sort">filter_list</i>
+</button>
+
+<button type="button" onclick="toggleOrder()">
+<i class="material-icons" id="icon-sort">swap_vert</i>
 </button>
 </div>
 
@@ -67,10 +66,7 @@ templ SearchBar() {
         <th>Name</th>
         <th>Image</th>
         <th>Type</th>
-        // <th>Secondary Type</th>
         <th>Abilities</th>
-        // <th>Second Ability</th>
-        // <th>Hidden Ability</th>
         <th>HP</th>
         <th>Atk</th>
         <th>Def</th>
@@ -78,7 +74,6 @@ templ SearchBar() {
         <th>Sp_Def</th>
         <th>Spd</th>
         <th>Tags</th>
-        // <th>Gen</th>
     </tr>
 </thead>
 <tbody id="table-body">
@@ -95,7 +90,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 const search = document.getElementById("search");
 search.addEventListener('input', function () {
-  console.log('Input value:', search.value); // Log input value
+  console.log('Input value:', search.value);
   findPokemon(search.value);
 });
 
@@ -166,9 +161,9 @@ function findPokemon(userInput) {
     console.log(group)
 
     fetch(url, {
-         method: 'POST',  // Use POST to send data
+         method: 'POST',  
         headers: {
-            'Content-Type': 'application/json'  // Indicate that we're sending JSON data
+            'Content-Type': 'application/json'  
         },
         body: JSON.stringify(
             { 
@@ -177,7 +172,7 @@ function findPokemon(userInput) {
                 types: types,
                 gens: gens,
                 group: group
-            })  // Send inputValue in the request body
+            })  
     })
     .then(response => {
         if (!response.ok) {
@@ -255,13 +250,11 @@ function appendPokemon(pokemons) {
             }
             else if (key == "first_ability") {
                 const first_ability = document.createElement("li");
-                // first_ability.className = "abilities";
                 first_ability.textContent = capitalizes(String(pokemon[key]));
                 abilities.appendChild(first_ability);
             }
             else if (key == "second_ability") {
                 const second_ability = document.createElement("li");
-                // second_ability.className = "abilities";
                 if (pokemon[key] != "Null") {
                     second_ability.textContent = capitalizes(String(pokemon[key]));
                 }
@@ -270,7 +263,6 @@ function appendPokemon(pokemons) {
              else if (key == "hidden_ability") {
                 const attribute = document.createElement("td");
                 const hidden_ability = document.createElement("li");
-                // hidden_ability.className = "abilities";
                 if (pokemon[key] != "Null") {
                     hidden_ability.textContent = capitalizes(String(pokemon[key]));
                     hidden_ability.style.fontWeight = "bold";
@@ -286,8 +278,8 @@ function appendPokemon(pokemons) {
                         const image = document.createElement("img");
                         const source = "assets/images/" + String(pokemon["id"]) + ".png";
                         image.src = source;
-                        image.style.width = "50px";  // Corrected width
-                        image.style.height = "50px";  // Corrected height
+                        image.style.width = "50px";  
+                        image.style.height = "50px"; 
                         attribute.appendChild(image);
                         break;
                     case "tags":
@@ -366,7 +358,6 @@ function switchTagValues(lyst, tags, key) {
                 datapoint.textContent = "Pseudo-Legendary";
                 lyst.appendChild(datapoint);
             }
-            
             break;
         case "isSubLegend":
             if (tags[key] == true) {
@@ -405,7 +396,5 @@ function capitalizes(str) {
         .map(segment => segment.charAt(0).toUpperCase() + segment.slice(1).toLowerCase())
         .join("-");
 }
-
-
 </script>
 }
