--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,13 +2,10 @@ body {
   margin: 1rem;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  /* font-size: 12px; */
   width: auto;
 }
 
 #search-bar {
-  /* border: 1px solid black; */
-  /* background-color: khaki; */
   margin-bottom: 1rem;
   display: flex;
   height: 1.5rem;
@@ -19,20 +16,20 @@ body {
 }
 
 #search::-webkit-search-cancel-button {
-  -webkit-appearance: none; /* Remove default styling */
-  background: url('../cancel.png') no-repeat center center; /* Custom icon */
-  background-size: 20px 20px; /* Adjust size of the icon */
-  width: 20px; /* Set width of the clear button */
-  height: 20px; /* Set height of the clear button */
-  cursor: pointer; /* Change cursor to pointer */
+  -webkit-appearance: none; 
+  background: url('../cancel.png') no-repeat center center; 
+  background-size: 20px 20px; 
+  width: 20px; 
+  height: 20px; 
+  cursor: pointer; 
 }
 
 button {
   margin-right: 1rem;
-  display: inline-flex; /* Ensure the button sizes based on its contents */
-  justify-content: center; /* Center the icon horizontally */
-  align-items: center; /* Center the icon vertically */
-  font-size: 20px; /* Set the desired size for the icon */
+  display: inline-flex;
+  justify-content: center;
+  align-items: center; 
+  font-size: 20px;
 }
 
 .material-icons {
@@ -43,7 +40,6 @@ button {
 }
 
 #filter {
-  /* padding: auto; */
   border: 1px solid black;
   background-color: rgb(248, 208, 215);
   margin-bottom: 1rem;
@@ -53,35 +49,32 @@ button {
 }
 
 #filter.show {
-  opacity: 1; /* Make visible */
-  display: block; /* Ensure it’s visible */
+  opacity: 1; 
+  display: block; 
 }
 
 #table {
   width: 100%;
-  box-sizing: border-box; /* Ensure padding and borders are included in width calculation */
+  box-sizing: border-box;
   text-align: center;
-  border-collapse: collapse; /* Remove border-spacing between cells */
-  margin: 0 auto; /* Center the table horizontally */
-  /* border: 1px solid black; */
+  border-collapse: collapse; 
+  margin: 0 auto; 
   background-color: azure;
 }
 
 #table td, #table th {
-  padding: .2rem; /* Set padding for table cells */
+  padding: .2rem; 
   border: 1px solid black;
 }
 
 ul {
   margin: 0;
   padding: 0;
-  /* border: 1px solid black; */
-  display: flex; /* Enable flexbox on the parent */
-  justify-content: center; /* Center the li elements horizontally */
+  display: flex;
+  justify-content: center;
 }
 
 li {
-  /* display: inline-block; */
   list-style: none;
 }
 
